--- a/src/main/resources/package.json
+++ b/src/main/resources/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.4.1"
+    "jquery": "^3.4.1",
+    "selectize": "^0.12.6"
   }
 }
