--- a/src/main/resources/package.json
+++ b/src/main/resources/package.json
@@ -2,6 +2,7 @@
   "name": "time-reporter-deps",
   "version": "1.0.0",
   "dependencies": {
+    "air-datepicker": "^2.2.3",
     "bootstrap": "^4.3.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
