--- a/src/main/resources/package.json
+++ b/src/main/resources/package.json
@@ -5,6 +5,7 @@
     "air-datepicker": "^2.2.3",
     "bootstrap": "^4.3.1",
     "font-awesome": "^4.7.0",
+    "handlebars": "^4.1.2",
     "jquery": "^3.4.1",
     "selectize": "^0.12.6"
   }
