Added C# app to help with running the app in production.

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ debug.log
 classes/
 /src/main/resources/node_modules/**
 src/main/resources/package-lock.json
+/AppRunner/ServerRunner/bin/**
+/AppRunner/ServerRunner/obj/**
