Added favicon to c# app runner.

--- a/AppRunner/ServerRunner/ServerRunner.csproj
+++ b/AppRunner/ServerRunner/ServerRunner.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{33203366-F3DD-458C-858E-711B15D31EC2}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>ServerRunner</RootNamespace>
-    <AssemblyName>ServerRunner</AssemblyName>
+    <AssemblyName>Time Reporter</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -34,6 +34,12 @@
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>appicon.ico</ApplicationIcon>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -50,6 +56,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="appicon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
