Added functionality to java app to communiate with the C# AppRunner.

--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,14 @@
             <artifactId>jbcrypt</artifactId>
             <version>0.4</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.java-websocket/Java-WebSocket -->
+        <dependency>
+            <groupId>org.java-websocket</groupId>
+            <artifactId>Java-WebSocket</artifactId>
+            <version>1.4.0</version>
+        </dependency>
+
         <!-- !Third Party Dependencies -->
     </dependencies>
 
