Added dependencies to C# app, added manager for local configuration. Made some structural changes.

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ src/main/resources/package-lock.json
 /AppRunner/ServerRunner/bin/**
 /AppRunner/ServerRunner/obj/**
 AppRunner/.vs/
+AppRunner/packages/
