Added command parser to C# App Runner. Renamed some config keys to make the app more general and not just java oriented.

--- a/AppRunner/ServerRunner/ServerRunner.csproj
+++ b/AppRunner/ServerRunner/ServerRunner.csproj
@@ -81,7 +81,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Config\LocalConfigKeys.cs" />
+    <Compile Include="Interfaces\ICommandParser.cs" />
     <Compile Include="Interfaces\ILocalConfigManager.cs" />
+    <Compile Include="Services\CommandParser.cs" />
     <Compile Include="Services\LocalConfigManager.cs" />
     <Compile Include="Util\FreePortFinder.cs" />
     <Compile Include="StartUp.cs" />
