--- a/AppRunner/ServerRunner/ServerRunner.csproj
+++ b/AppRunner/ServerRunner/ServerRunner.csproj
@@ -68,6 +68,9 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Fleck, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Fleck.1.1.0\lib\net45\Fleck.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -80,10 +83,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Config\CommunicationMessages.cs" />
     <Compile Include="Config\LocalConfigKeys.cs" />
     <Compile Include="Interfaces\ICommandParser.cs" />
+    <Compile Include="Interfaces\ICommunicationManager.cs" />
     <Compile Include="Interfaces\ILocalConfigManager.cs" />
+    <Compile Include="CommunicationServer.cs" />
     <Compile Include="Services\CommandParser.cs" />
+    <Compile Include="Services\CommunicationManager.cs" />
     <Compile Include="Services\LocalConfigManager.cs" />
     <Compile Include="Util\FreePortFinder.cs" />
     <Compile Include="StartUp.cs" />
