--- a/AppRunner/ServerRunner/packages.config
+++ b/AppRunner/ServerRunner/packages.config
@@ -4,5 +4,6 @@
   <package id="cef.redist.x86" version="75.1.14" targetFramework="net461" />
   <package id="CefSharp.Common" version="75.1.142" targetFramework="net461" />
   <package id="CefSharp.WinForms" version="75.1.142" targetFramework="net461" />
+  <package id="Fleck" version="1.1.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
 </packages>
