--- a/AppRunner/ServerRunner/ServerRunner.csproj
+++ b/AppRunner/ServerRunner/ServerRunner.csproj
@@ -112,7 +112,11 @@
   <ItemGroup>
     <Content Include="appicon.ico" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Forms\BrowserForm.resx">
+      <DependentUpon>BrowserForm.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
